--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@heroicons/react": "^2.1.5",
     "@prisma/client": "^5.17.0",
     "next": "14.2.5",
+    "next-cloudinary": "^6.10.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "react-toastify": "^10.0.5",
     "zod": "^3.23.8",
     "zustand": "^4.5.4"
